chinh sua giao dien

--- a/app/src/main/res/layout/activity_chinh_sua_the_loai.xml
+++ b/app/src/main/res/layout/activity_chinh_sua_the_loai.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@drawable/v1"
     tools:context=".activity.admin.ChinhSuaTheLoaiActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -35,12 +35,22 @@
             android:layout_marginTop="20dp"
             android:text="Tên thể loại"/>
 
-        <EditText
-            android:id="@+id/edtTenTheLoai"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/custom_edittext"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/custom_edittext">
+
+            <EditText
+                android:id="@+id/edtTenTheLoai"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/custom_no_border"/>
+
+        </LinearLayout>
+
 
 
         <androidx.cardview.widget.CardView
