--- a/app/src/main/res/layout/activity_dat_hang.xml
+++ b/app/src/main/res/layout/activity_dat_hang.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:background="@drawable/v1"
     tools:context=".activity.user.DatHangActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -88,7 +89,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="132dp"
                         android:layout_marginBottom="16dp"
-                        android:src="@drawable/baseline_delete_outline_24"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imgDatHangChinhSua" />
 
