--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -8,16 +8,17 @@
     tools:context=".activity.LoginActivity"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/white">
+    android:background="@drawable/a4">
 
 
     <Button
         android:id="@+id/btnXacThuc"
         android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="308dp"
         android:backgroundTint="@color/purple"
         android:text="Receive verify code"
+        android:background="@drawable/custom_button"
         android:textSize="18sp"
         app:cornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,35 +31,38 @@
         android:layout_width="wrap_content"
         android:layout_height="29dp"
         android:layout_marginStart="86dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="160dp"
         android:text="Make your day !"
+        android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.376"
+        app:layout_constraintHorizontal_bias="0.417"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="126dp"
         android:layout_height="34dp"
-        android:layout_marginTop="116dp"
-        android:layout_marginEnd="112dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="108dp"
         android:gravity="center_vertical"
         android:text="Koffee Shop"
-        android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textColor="@color/brown"
+        android:textSize="22dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="78dp"
-        android:layout_height="72dp"
+        android:layout_width="80dp"
+        android:layout_height="75dp"
         android:layout_gravity="end"
-        android:layout_marginTop="108dp"
-        android:src="@drawable/coffelogo"
+        android:layout_marginTop="116dp"
+        android:src="@drawable/b1"
         app:layout_constraintEnd_toStartOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.873"
+        app:layout_constraintHorizontal_bias="0.978"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
