--- a/app/src/main/res/layout/recycler_don_hang_admin.xml
+++ b/app/src/main/res/layout/recycler_don_hang_admin.xml
@@ -122,6 +122,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:paddingTop="4dp"
         android:background="@drawable/custom_break_line"/>
 
