--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,7 +8,7 @@
     tools:context=".activity.LoginActivity"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/white">
+    android:background="@drawable/bg4">
 
     <ImageView
         android:id="@+id/imageView"
@@ -16,7 +16,7 @@
         android:layout_height="72dp"
         android:layout_gravity="end"
         android:layout_marginTop="140dp"
-        android:src="@drawable/coffelogo"
+        android:src="@drawable/b1"
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.978"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +29,8 @@
         android:layout_marginStart="86dp"
         android:layout_marginTop="4dp"
         android:text="Make your day !"
+        android:textColor="@color/brown"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.384"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,28 +40,15 @@
         android:id="@+id/textView"
         android:layout_width="126dp"
         android:layout_height="34dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="144dp"
         android:layout_marginEnd="112dp"
         android:gravity="center_vertical"
         android:text="Koffee Shop"
-        android:textColor="@color/black"
+        android:textColor="@color/brown"
         android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-<!--    <Button-->
-<!--        android:id="@+id/btnLuu"-->
-<!--        android:layout_width="300dp"-->
-<!--        android:layout_height="50dp"-->
-<!--        android:layout_marginBottom="184dp"-->
-<!--        android:backgroundTint="@color/purple"-->
-<!--        android:text="Save"-->
-<!--        android:textSize="18sp"-->
-<!--        app:cornerRadius="20dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="0.495"-->
-<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
     <androidx.cardview.widget.CardView
         android:layout_width="300dp"
