--- a/app/src/main/res/layout/activity_chinh_sua_do_uong.xml
+++ b/app/src/main/res/layout/activity_chinh_sua_do_uong.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/v1"
     tools:context=".activity.admin.ChinhSuaDoUongActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -170,23 +171,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:src="@mipmap/ic_launcher"/>
-
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="50dp"-->
-<!--                android:layout_marginBottom="20dp"-->
-<!--                android:background="@drawable/custom_edittext">-->
-
-<!--                <EditText-->
-<!--                    android:id="@+id/edtChinhSuaHinhAnh"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="50dp"-->
-<!--                    android:layout_marginLeft="10dp"-->
-<!--                    android:background="@drawable/custom_no_border"/>-->
-
-<!--            </LinearLayout>-->
+                android:src="@drawable/apn"/>
 
         </LinearLayout>
     </ScrollView>
