--- a/app/src/main/res/layout/activity_khuyen_mai.xml
+++ b/app/src/main/res/layout/activity_khuyen_mai.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/v1"
     tools:context=".activity.user.KhuyenMaiActivity">
 
     <androidx.appcompat.widget.Toolbar
