--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,18 +8,18 @@
     tools:context=".activity.LoginActivity"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/white">
+    android:background="@drawable/a4">
 
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="78dp"
-        android:layout_height="72dp"
+        android:layout_width="80dp"
+        android:layout_height="75dp"
         android:layout_gravity="end"
-        android:layout_marginTop="68dp"
-        android:src="@drawable/coffelogo"
+        android:layout_marginTop="100dp"
+        android:src="@drawable/b1"
         app:layout_constraintEnd_toStartOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.902"
+        app:layout_constraintHorizontal_bias="0.888"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,29 +27,32 @@
         android:id="@+id/textView"
         android:layout_width="126dp"
         android:layout_height="34dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="104dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="112dp"
         android:gravity="center_vertical"
         android:text="Koffee Shop"
-        android:textColor="@color/black"
-        android:textSize="20dp"
+        android:textColor="@color/brown"
+        android:textSize="22dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnDangNhap"
         android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:backgroundTint="@color/purple"
         android:text="Login"
         android:textSize="18sp"
-        app:cornerRadius="20dp"
+        app:cornerRadius="15dp"
+        android:background="@drawable/custom_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup"
         app:layout_constraintVertical_bias="0.053" />
+
 
     <TextView
         android:layout_width="100dp"
@@ -67,12 +70,14 @@
         android:layout_width="wrap_content"
         android:layout_height="29dp"
         android:layout_marginStart="86dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="144dp"
         android:text="Make your day !"
+        android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.418"
+        app:layout_constraintHorizontal_bias="0.408"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="50dp"
@@ -165,6 +170,7 @@
 
     <TextView
         android:id="@+id/textView4"
+        android:textColor="@color/brown"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:gravity="center"
@@ -184,6 +190,7 @@
         android:layout_marginBottom="16dp"
         android:gravity="center"
         android:text="Đăng ký"
+        android:textColor="@color/brown"
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
