--- a/app/src/main/res/layout/activity_order_product.xml
+++ b/app/src/main/res/layout/activity_order_product.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@color/white"
+    android:background="@drawable/v1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
