--- a/app/src/main/res/layout/activity_phan_hoi.xml
+++ b/app/src/main/res/layout/activity_phan_hoi.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
+    android:background="@drawable/v1"
     tools:context=".activity.user.PhanHoiActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -21,9 +22,16 @@
         app:layout_constraintVertical_bias="0.0"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:text="Updating..."
+        android:textSize="20dp"
+        android:gravity="center"/>
+
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/silince"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
