--- a/app/src/main/res/layout/activity_phuong_thuc_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_phuong_thuc_thanh_toan.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/v1"
     tools:context=".activity.user.PhuongThucThanhToanActivity">
 
     <androidx.appcompat.widget.Toolbar
