--- a/app/src/main/res/layout/activity_them_do_uong.xml
+++ b/app/src/main/res/layout/activity_them_do_uong.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/v1"
     tools:context=".activity.admin.ThemDoUongActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -194,7 +195,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:src="@mipmap/ic_launcher"/>
+                android:src="@drawable/apn"/>
 
         </LinearLayout>
     </ScrollView>
