--- a/app/src/main/res/layout/fragment_ca_phe.xml
+++ b/app/src/main/res/layout/fragment_ca_phe.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white"
+    android:background="@drawable/v1"
     tools:context=".activity.user.CaPheFragment"
     android:orientation="vertical">
 
