--- a/app/src/main/res/layout/fragment_sinh_to.xml
+++ b/app/src/main/res/layout/fragment_sinh_to.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.user.SinhToFragment"
+    android:background="@drawable/v1"
     android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
