--- a/app/src/main/res/layout/recycler_order_user.xml
+++ b/app/src/main/res/layout/recycler_order_user.xml
@@ -110,6 +110,8 @@
         android:layout_marginBottom="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/custom_break_line"/>
 
 </LinearLayout>
