--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="purple">#8692f7</color>
+<!--    <color name="purple">#8692f7</color>-->
+    <color name="purple">#5a3c39</color>
     <color name="brown">#5a3c39</color>
 
 </resources>
