--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,7 +8,7 @@
     tools:context=".activity.LoginActivity"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/bg4">
+    android:background="@drawable/a4">
 
     <ImageView
         android:id="@+id/imageView"
